Install react-rails gem, import select tag

--- a/app/views/pages/welcome.html.erb
+++ b/app/views/pages/welcome.html.erb
@@ -498,3 +498,40 @@ rails s -b $IP -p $PORT
 # Successful script
 exit 0
 </xmp>
+
+<h2>select.js.jsx, option.js.jsx</h2>
+
+<%= react_component "Select" %>
+
+<xmp>
+some code here for select.js.jsx
+
+
+
+
+
+
+
+
+
+
+
+
+
+</xmp>
+
+<xmp>
+some code here for option.js.jsx
+
+
+
+
+
+
+
+
+
+
+
+
+</xmp>
