--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,1 +1,14 @@
-header
+<header id="navigation" class="closed">
+  <nav id="menu" role="navigation">
+    <a href="#"><span>about</span></a>
+    <a href="#"><span>services</span></a>
+    <a href="#"><span>clients</span></a>
+    <a href="#"><span>contact</span></a>
+  </nav>
+
+  <div id="burger" class="lines">
+    <i></i>
+    <i></i>
+    <i></i>
+  </div>
+</header>
