Add about and contact view partials

--- a/app/views/pages/_header.html.erb
+++ b/app/views/pages/_header.html.erb
@@ -1,9 +1,9 @@
 <header id="navigation" class="closed">
   <nav id="menu" role="navigation">
-    <a href="#"><span>about</span></a>
+    <a href="#about"><span>about</span></a>
     <a href="#"><span>services</span></a>
     <a href="#"><span>clients</span></a>
-    <a href="#"><span>contact</span></a>
+    <a href="#contact"><span>contact</span></a>
   </nav>
 
   <div id="burger" class="lines">
