--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -72,7 +72,6 @@ header#navigation {
   nav#menu {
     position: fixed;
     background-color: #333;
-    //z-index: 100;
     padding: 10% 0;
     top: 0;
     left: 0;
@@ -96,9 +95,8 @@ header#navigation {
       width: 90%;
       max-width: 600px;
       margin: 0 auto;
-      height: calc(100% / 4);
+      height: 25%;
       position: relative;
-      // background-color: rgba(0,0,0,.02);
       overflow: hidden;
       
       @include transition(transform, $a-duration, $a-timing, 0s);
