--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -2,4 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 @import "header.scss";
+@import "about.scss";
+@import "work.scss";
+@import "contact.scss";
 @import "footer.scss";
