--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
   </head>
 
   <body>
-    <%= render 'header' %>
+    <%= render 'layouts/header' %>
     
     <%= yield %>
     
-    <%= render 'footer' %>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
