--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,3 @@
-<%= render 'about' %>
-<%= render 'work' %>
-<%= render 'contact' %>
+<%= render 'pages/home/about' %>
+<%= render 'pages/home/work' %>
+<%= render 'pages/home/contact' %>
