--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,9 @@
     
     <!--Use Google Analytics-->
     <%= render 'layouts/google_analytics' %>
+    
+    <!--Google Fonts-->
+    <%= render 'layouts/google_fonts' %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
