--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -1,3 +1,6 @@
+$sans-serif: 'Covered By Your Grace', cursive;
+$serif: Arial;
+
 * {
   padding: 0;
   margin: 0;
@@ -17,4 +20,7 @@ html {
 
 body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
+  width: 100%;
+  height: 100%;
+  font-family: $sans-serif;
 }
