--- a/app/views/layouts/_google_fonts.html.erb
+++ b/app/views/layouts/_google_fonts.html.erb
@@ -1,1 +1,2 @@
 <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
