--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -12,12 +12,7 @@ header#navigation {
     height: 100%;
     display: block;
     
-    $nav-duration: 1s;
-    $a-duration: 1s;
-    $nav-timing: cubic-bezier(.25,1,.5,1);
-    $a-timing: $nav-timing;
-    
-    @include transition(transform, $nav-duration, $nav-timing, 0s);
+    @include transition(transform, 1s, cubic-bezier(.25,1,.5,1), 0s);
     
     a {
       @include display-flex;
@@ -32,7 +27,11 @@ header#navigation {
       position: relative;
       overflow: hidden;
       
-      @include transition(transform, $a-duration, $a-timing, 0s);
+      @include respond-to(phone) { font-size: 1.4em; }
+      @include respond-to(tablet) { font-size: 1.6em; }
+      @include respond-to(desktop) { font-size: 2em; }
+      
+      @include transition(transform, 1s, cubic-bezier(.25,1,.5,1), 0s);
       
       &.hover {
         background-color: rgba(255,255,255,0.1);
@@ -62,10 +61,6 @@ header#navigation {
         text-align: center;
         position: relative;
         z-index: 3;
-        
-        // &.active {
-        //   color: white;
-        // }
       }
     }
   }
@@ -79,7 +74,7 @@ header#navigation {
       }
       
       a:nth-child(even) {
-        @include transform(translateX(+100%));
+        @include transform(translateX( 100%));
       }
     }
   }
@@ -90,105 +85,112 @@ header#navigation {
     right: 40px;
     top: 40px;
     cursor: pointer;
-    padding: 5px;
     background-color: transparent;
     
-    $i-height: 16px;
-    $i-color: #818181;
-    $i-width-factor: 8;
-    $i-margin-factor: 1;
-    $i-width: $i-height * $i-width-factor;
-    $i-margin: $i-height * $i-margin-factor;
-    $i-midpoint: $i-height + $i-margin;
-
-    $i-lines-offset: 0.25 * $i-margin;
-    $i-cross-offset: 5deg;
-    $i-lines-force: 0.2;
-    $i-cross-force: 0.1;
-
-    $i-duration: 0.4s;
-    $burger-duration: 2 * $i-duration;
-
-    $i-timing: cubic-bezier(.25,1.5,.5,1);
-    $burger-timing: cubic-bezier(.25,1.5,.5,1);
+    @include respond-to(phone) {
+      height: 100px;
+      width: 100px;
+    }
+    
+    @include respond-to(tablet) {
+      height: 125px;
+      width: 125px;
+    }
+    
+    @include respond-to(desktop) {
+      height: 150px;
+      width: 150px;
+    }
     
     @include user-select(none);
-    @include transition(transform, $burger-duration, $burger-timing, 0s);
+    @include transition(transform, 0.8s, cubic-bezier(.25,1.5,.5,1), 0s);
     
     i {
       display: block;
-      width: $i-height * $i-width-factor;
-      height: $i-height;
-      margin: $i-margin;
-      background-color: $i-color;
-      @include border-radius($i-height);
-      @include transition(transform, $i-duration, $i-timing, 0s);
+      height: 10%;
+      width: 100%;
+      background-color: #818181;
+      @include border-radius(5%/#{50%});
+      @include transition(transform, 0.4s, cubic-bezier(.25,1.5,.5,1), 0s);
+      
+      &:nth-child(1) {
+        margin-top: 25%;
+        margin-bottom: 10%;
+      }
+      
+      &:nth-child(2) {
+        margin-bottom: 10%;
+      }
+      
+      &:nth-child(3) {
+        margin-bottom: 25%;
+      }
     }
     
     &.cross {
       @include transform(rotate(90deg));
     }
-
+    
     &.cross.closing, &.lines {
       @include transform(rotate(0));
     }
-
+    
     &.lines.hover {
       i:nth-child(1) {
-        @include transform(translateY(-$i-lines-offset));
+        @include transform(translateY(-50%));
       }
-
+      
       i:nth-child(3) {
-        @include transform(translateY(+$i-lines-offset));
+        @include transform(translateY( 50%));
       }
     }
-
+    
     &.lines.mousedown {
       i:nth-child(1) {
-        @include transform(translateY(-2 * $i-lines-offset));
+        @include transform(translateY(-100%));
       }
-
+      
       i:nth-child(3) {
-        @include transform(translateY(+2 * $i-lines-offset));
+        @include transform(translateY( 100%));
       }
     }
-
+    
     &.cross {
       i:nth-child(1) {
-        @include transform(translateY(+$i-midpoint) rotate(+45deg));
+        @include transform(translateY( 200%) rotate( 45deg));
       }
       i:nth-child(2) {
         opacity: 0;
       }
       i:nth-child(3) {
-        @include transform(translateY(-$i-midpoint) rotate(-45deg));
+        @include transform(translateY(-200%) rotate(-45deg));
       }
     }
-
+    
     &.cross.hover  {
       i:nth-child(1) {
-        @include transform(translateY(+$i-midpoint) rotate(+45 - $i-cross-offset));
+        @include transform(translateY( 200%) rotate( 50deg));
       }
       i:nth-child(3) {
-        @include transform(translateY(-$i-midpoint) rotate(-45 + $i-cross-offset));
+        @include transform(translateY(-200%) rotate(-50deg));
       }
     }
-
+    
     &.cross.mousedown  {
       i:nth-child(1) {
-        @include transform(translateY(+$i-midpoint) rotate(+45 - 2 * $i-cross-offset));
+        @include transform(translateY( 200%) rotate( 55deg));
       }
       i:nth-child(3) {
-        @include transform(translateY(-$i-midpoint) rotate(-45 + 2 * $i-cross-offset));
+        @include transform(translateY(-200%) rotate(-55deg));
       }
     }
-
+    
     &.lines.opening, &.cross.closing {
       i:nth-child(1) {
-        @include transform(translateY(+$i-midpoint));
+        @include transform(translateY( 200%));
       }
       i:nth-child(3) {
-        @include transform(translateY(-$i-midpoint));
+        @include transform(translateY(-200%));
       }
     }
   }
