--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,4 +4,4 @@ section#about, section#work, section#contact {
 
 @import "pages/home/about.scss";
 @import "pages/home/work.scss";
-@import "pages/home/about.scss";
+@import "pages/home/contact.scss";
