--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -9,6 +9,11 @@ $serif: 'Poiret One', cursive;
   box-sizing: border-box;
 }
 
+html, body {
+  min-height: 100% !important;
+  height: 100%;
+}
+
 body {
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   // width: 100%;
