Add color theme, remove background image

--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -1,5 +1,6 @@
 <section id="about">
   <div id="hero">
-    JUST SOME TEXT
+    <h1 id="name">THEY CALL ME GRIZ</h1>
+    <p>ASPIRING UX DESIGNER</p>
   </div>
 </section>
