--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -4,7 +4,7 @@ header#navigation {
   
   nav#menu {
     position: fixed;
-    background-color: #333;
+    background-color: map-get($mex, orange);;
     padding: 10% 0;
     top: 0;
     left: 0;
@@ -18,7 +18,7 @@ header#navigation {
       @include display-flex;
       @include align-items(center);
       text-align: center;
-      color: #818181;
+      color: black;
       text-decoration: none;
       width: 90%;
       max-width: 600px;
