--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,6 +1,5 @@
 section#about {
-  background-image: url('wallpaper');
-  background-position: center center;
+  background: map-get($mex, blue);
   
   div#hero {
     display: block;
@@ -8,5 +7,15 @@ section#about {
     max-width: 960px;
     margin: 0px auto;
     color: white;
+    text-align: center;
+    
+    h1 {
+      font-weight: normal;
+      font-size: 5rem;
+    }
+    
+    p {
+      font-size: 3rem;
+    }
   }
 }
