--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -1,6 +1,20 @@
 <section id="about">
   <div id="hero">
+    <!--<h1 id="name">____ ____ __ ____</h1>-->
+    <!--<p>________ __ ________</p>-->
     <h1 id="name">THEY CALL ME GRIZ</h1>
     <p>ASPIRING UX DESIGNER</p>
   </div>
+  
+  <div id="about-pull">
+    <div id="about-pull-handle"><span>></span></div>
+    <div id="about-pull-tondo"></div>
+    <div id="about-pull-tease"></div>
+    <div id="about-pull-info"></div>
+    <div id="about-pull-summary"></div>
+  </div>
+  
+  <a id="about-contact" href="#contact">
+    <span>CONTACT</span>
+  </a>
 </section>
