--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -1,16 +1,15 @@
-$wobble-bezier: cubic-bezier(.1,3,.75,0.5);
-
 header#navigation {
   
   nav#menu {
     position: fixed;
-    background-color: map-get($mex, orange);;
+    background-color: map-get($mex, orange);
     padding: 10% 0;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     display: block;
+    z-index: 2;
     
     @include transition(transform, 1s, cubic-bezier(.25,1,.5,1), 0s);
     
@@ -18,7 +17,7 @@ header#navigation {
       @include display-flex;
       @include align-items(center);
       text-align: center;
-      color: black;
+      color: map-get($mex, blue);
       text-decoration: none;
       width: 90%;
       max-width: 600px;
@@ -26,11 +25,10 @@ header#navigation {
       height: 25%;
       position: relative;
       overflow: hidden;
-      z-index: 3;
       
-      @include respond-to(phone) { font-size: 1.9em; }
-      @include respond-to(tablet) { font-size: 2.2em; }
-      @include respond-to(desktop) { font-size: 2.5em; }
+      @include respond-to(phone) { font-size: 2.5rem; }
+      @include respond-to(tablet) { font-size: 2.75rem; }
+      @include respond-to(desktop) { font-size: 3rem; }
       
       @include transition(transform, 1s, cubic-bezier(.25,1,.5,1), 0s);
       
