--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -18,4 +18,87 @@ section#about {
       font-size: 3rem;
     }
   }
+  
+  div#about-pull {
+    position: absolute;
+    height: 50%;
+    width: 100%;
+    bottom: 0px;
+    right: 100%;
+    background: map-get($mex, green);
+    z-index: 1;
+    
+    @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 0s);
+    
+    div#about-pull-handle {
+      @include display-flex;
+      @include align-items(center);
+      position: absolute;
+      height: 100%;
+      width: 128px;
+      right: -128px;
+      bottom: 0;
+      background: transparent;
+      color: white;
+      z-index: inherit;
+      cursor: pointer;
+      font-size: 5rem;
+      
+      @include transition(font-size, 0.2s, cubic-bezier(.25,1,.5,1), 0s);
+      @include transition(right, 1s, cubic-bezier(.25,1,.5,1), 1s);
+      
+      span {
+        display: block;
+        width: 100%;
+        text-align: center;
+        position: relative;
+      }
+      
+      &.hover {
+        background: rgba(0,0,0,0.1);
+        font-size: 7.5rem;
+      }
+      
+      &.mousedown {
+        background: rgba(0,0,0,0.2);
+        font-size: 10rem;
+      }
+    }
+    
+    &.show {
+      right: 0;
+      overflow-x: hidden;
+      
+      div#about-pull-handle {
+        right: 0;
+      }
+    }
+  }
+  
+  a#about-contact {
+    @include display-flex;
+    @include align-items(center);
+    position: absolute;
+    height: 128px;
+    width: 40%;
+    bottom: 30px;
+    right: 30px;
+    text-decoration: none;
+    text-align: center;
+    color: white;
+    background: map-get($mex, pink);
+      
+    @include respond-to(phone) { font-size: 2.5rem; }
+    @include respond-to(tablet) { font-size: 2.75rem; }
+    @include respond-to(desktop) { font-size: 3rem; }
+    
+    @include border-radius(4px);
+      
+    span {
+      display: block;
+      width: 100%;
+      text-align: center;
+      position: relative;
+    }
+  }
 }
