--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -2,8 +2,8 @@
   <div id="hero">
     <!--<h1 id="name">____ ____ __ ____</h1>-->
     <!--<p>________ __ ________</p>-->
-    <h1 id="name">THEY CALL ME GRIZ</h1>
-    <p>ASPIRING UX DESIGNER</p>
+    <span id="hero-large">THEY CALL ME GRIZ</h1>
+    <span id="hero-small">ASPIRING UX DESIGNER</p>
   </div>
   
   <div id="about-pull">
