--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -1,9 +1,11 @@
 <section id="about">
   <div id="hero">
-    <!--<h1 id="name">____ ____ __ ____</h1>-->
-    <!--<p>________ __ ________</p>-->
-    <span id="hero-large">THEY CALL ME GRIZ</h1>
-    <span id="hero-small">ASPIRING UX DESIGNER</p>
+    <div>
+      <span id="hero-large">____ ____ __ ____</span>
+      <span id="hero-small">________ __ ________</span>
+      <!--<span id="hero-large">THEY CALL ME GRIZ</span>-->
+      <!--<span id="hero-small">ASPIRING UX DESIGNER</span>-->
+    </div>
   </div>
   
   <div id="about-pull">
