--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -65,13 +65,12 @@ section#about {
       color: white;
       cursor: pointer;
       font-size: 5rem;
+      z-index: 2;
       
       @include transition(font-size, 0.2s, cubic-bezier(.25,1,.5,1), 0s);
       @include transition(right, 1s, cubic-bezier(.25,1,.5,1), 0s);
       
-      
-      
-      @include respond-to(phone) { height: 70%; }
+      @include respond-to(phone) { padding-top: 30%; }
       
       span {
         display: block;
@@ -98,6 +97,8 @@ section#about {
       top: -64px;
       right: calc(12.5% - 64px);
       background: white;
+      cursor: pointer;
+      z-index: 2;
     
       @include border-radius(64px);
       
@@ -108,51 +109,62 @@ section#about {
       }
     }
     
-    div#about-pull-tease, div#about-pull-info, div#about-pull-summary {
-      @include display-flex;
-      position: absolute;
-      height: 100%;
-      width: 33%;
-      padding: 4px;
-      color: white;
+    div#about-me, div#about-millie, div#about-learning {
+      opacity: 0;
       z-index: -1;
       
-      @include respond-to(phone) {
-        height: 33%;
-        width: 100%;
+      &.show {
+        opacity: 1;
       }
       
-      span {
-        display: block;
-        width: 100%;
-        text-align: center;
-        position: relative;
+      div.about-pull-tease, div.about-pull-info, div.about-pull-summary {
+        @include display-flex;
+        position: absolute;
+        height: 100%;
+        width: 33%;
+        padding: 4px;
+        color: white;
+        z-index: -1;
+        
+        @include transition(opacity, 1s, cubic-bezier(.25,1,.5,1), 0s);
+        
+        @include respond-to(phone) {
+          height: 33%;
+          width: 100%;
+        }
+        
+        span {
+          display: block;
+          width: 100%;
+          text-align: center;
+          position: relative;
+        }
       }
-    }
-    
-    div#about-pull-tease {
-      font-size: 3rem;
       
-      @include align-items(flex-start);
-    }
-    
-    div#about-pull-info {
-      left: 33%;
-      font-size: 2.5rem;
+      div.about-pull-tease {
+        font-size: 3rem;
+        
+        @include align-items(flex-start);
+      }
       
-      @include align-items(center);
+      div.about-pull-info {
+        left: 33%;
+        font-size: 2.5rem;
+        
+        @include align-items(center);
+        
+        @include respond-to(phone) { top: 33%; left: 0; }
+      }
       
-      @include respond-to(phone) { top: 33%; left: 0; }
-    }
-    
-    div#about-pull-summary {
-      left: 67%;
-      font-size: 2rem;
-      padding-bottom: 32px;
-      
-      @include align-items(flex-end);
-      
-      @include respond-to(phone) { top: 66%; left: 0; }
+      div.about-pull-summary {
+        left: 67%;
+        font-size: 2rem;
+        padding-bottom: 32px;
+        
+        @include align-items(flex-end);
+        
+        @include respond-to(phone) { top: 66%; left: 0; }
+      }
     }
     
     &.show {
