--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -11,7 +11,8 @@ section#about {
     margin: 0px auto;
     color: white;
     
-    @include transition(height, 1s, cubic-bezier(.25,1,.5,1), 1s);
+    @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 1s);
+    // @include transition(opacity, 1s, cubic-bezier(.25,1,.5,1), 0s);
     
     div {
       display: block;
@@ -37,8 +38,10 @@ section#about {
     }
     
     &.shrink {
-      @include transition(height, 1s, cubic-bezier(.25,1,.5,1), 0s);
+      @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 0s);
       height: 33%;
+      
+      @include respond-to(phone) { opacity: 0; }
     }
   }
   
@@ -117,7 +120,7 @@ section#about {
         @include display-flex;
         position: absolute;
         height: 100%;
-        width: 33%;
+        width: 30%;
         padding: 4px;
         color: white;
         z-index: -1;
@@ -142,26 +145,37 @@ section#about {
         
         @include align-items(flex-start);
         
-        @include respond-to(phone) { top: 25%; }
+        @include respond-to(phone) {
+          top: 25%;
+          font-size: 2rem;
+        }
       }
       
       div.about-pull-info {
-        left: 33%;
+        left: 30%;
         font-size: 2.5rem;
         
         @include align-items(center);
         
-        @include respond-to(phone) { top: 50%; left: 0; }
+        @include respond-to(phone) {
+          top: 50%;
+          left: 0;
+          font-size: 1.75rem;
+        }
       }
       
       div.about-pull-summary {
-        left: 67%;
+        left: 60%;
         font-size: 2rem;
         padding-bottom: 32px;
         
         @include align-items(flex-end);
         
-        @include respond-to(phone) { top: 75%; left: 0; }
+        @include respond-to(phone) {
+          top: 75%;
+          left: 0;
+          font-size: 1.5rem;
+        }
       }
     }
     
@@ -173,7 +187,10 @@ section#about {
       }
       
       div#about-pull-tondo {
-        right: calc(12.5% - 64px);
+        // 10% for pull, 30% / 2 to center, 128px / 2 to center
+        right: calc(25% - 64px);
+        
+        @include respond-to(phone) { right: calc(55% - 64px); }
       }
     }
   }
