--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -11,42 +11,47 @@
   <div id="about-pull">
     <div id="about-pull-handle"><span>></span></div>
     <div id="about-pull-tondo"></div>
-    
-    <div id="about-me">
-      <div class="about-pull-tease">
-        <span>_ __ ____</span>
-      </div>
-      <div class="about-pull-info">
-        <span>I enjoy creating beautifully designed experiences.</span>
-      </div>
-      <div class="about-pull-summary">
-        <span>Contact me for your next website or job</span>
-      </div>
+    <div id="about-pull-content">
+      <div class="about-pull-tease"></div>
+      <div class="about-pull-info"></div>
+      <div class="about-pull-summary"></div>
     </div>
     
-    <div id="about-millie">
-      <div class="about-pull-tease">
-        <span>FEAR THE PUP MILLIE</span>
-      </div>
-      <div class="about-pull-info">
-        <span>Rescued and sassy, she loves playing with bones and howling at strangers</span>
-      </div>
-      <div class="about-pull-summary">
-        <span>Will demand play before cuddles</span>
-      </div>
-    </div>
+    <!--<div id="about-me">-->
+    <!--  <div class="about-pull-tease">-->
+    <!--    <span>_ __ ____</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-info">-->
+    <!--    <span>I enjoy creating beautifully designed experiences.</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-summary">-->
+    <!--    <span>Contact me for your next website or job</span>-->
+    <!--  </div>-->
+    <!--</div>-->
     
-    <div id="about-learning">
-      <div class="about-pull-tease">
-        <span>LEARNING AND LISTENING</span>
-      </div>
-      <div class="about-pull-info">
-        <span>I have such a passion for learning new tech and methods often I have to apply new concepts before completely learning them</span>
-      </div>
-      <div class="about-pull-summary">
-        <span>I am always up for a challenge</span>
-      </div>
-    </div>
+    <!--<div id="about-millie">-->
+    <!--  <div class="about-pull-tease">-->
+    <!--    <span>FEAR THE PUP MILLIE</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-info">-->
+    <!--    <span>Rescued and sassy, she loves playing with bones and howling at strangers</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-summary">-->
+    <!--    <span>Will demand play before cuddles</span>-->
+    <!--  </div>-->
+    <!--</div>-->
+    
+    <!--<div id="about-learning">-->
+    <!--  <div class="about-pull-tease">-->
+    <!--    <span>LEARNING AND LISTENING</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-info">-->
+    <!--    <span>I have such a passion for learning new tech and methods often I have to apply new concepts before completely learning them</span>-->
+    <!--  </div>-->
+    <!--  <div class="about-pull-summary">-->
+    <!--    <span>I am always up for a challenge</span>-->
+    <!--  </div>-->
+    <!--</div>-->
   </div>
   
   <a id="about-contact" href="#contact">
