--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -11,8 +11,7 @@ section#about {
     margin: 0px auto;
     color: white;
     
-    @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 1s);
-    // @include transition(opacity, 1s, cubic-bezier(.25,1,.5,1), 0s);
+    @include transition(all, 1s, $normal-bezier, 1s);
     
     div {
       display: block;
@@ -38,7 +37,7 @@ section#about {
     }
     
     &.shrink {
-      @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 0s);
+      @include transition(all, 1s, $normal-bezier, 0s);
       height: 33%;
       
       @include respond-to(phone) { opacity: 0; }
@@ -54,7 +53,7 @@ section#about {
     background: map-get($mex, green);
     z-index: 1;
     
-    @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 0s);
+    @include transition(all, 1s, $normal-bezier, 0s);
     
     div#about-pull-handle {
       @include display-flex;
@@ -70,7 +69,7 @@ section#about {
       font-size: 5rem;
       z-index: 2;
       
-      @include transition(right, 1s, cubic-bezier(.25,1,.5,1), 0s);
+      @include transition(right, 1s, $normal-bezier, 0s);
       
       span {
         display: block;
@@ -101,14 +100,13 @@ section#about {
       z-index: 2;
     
       @include border-radius(64px);
-      @include transition(all, 1s, cubic-bezier(.25,1,.5,1), 0s);
+      @include transition(all, 1s, $normal-bezier, 0s);
       
       &.focus {
         @include border-radius(4px);
       }
     }
     
-    // div#about-me, div#about-millie, div#about-learning {
     div#about-pull-content {
       z-index: -1;
       
@@ -121,7 +119,7 @@ section#about {
         color: white;
         z-index: -1;
         
-        @include transition(opacity, 1s, cubic-bezier(.25,1,.5,1), 0s);
+        @include transition(opacity, 1s, $normal-bezier, 0s);
         
         @include respond-to(phone) {
           height: 25%;
@@ -171,6 +169,30 @@ section#about {
           top: 75%;
           left: 0;
           font-size: 1.5rem;
+        }
+      }
+    }
+    
+    div#about-pull-breadcrumbs {
+      position: absolute;
+      // height: 10%;
+      bottom: 0;
+      
+      span {
+        display: inline-block;
+        height: 64px;
+        width: 64px;
+        margin: 8px;
+        background: transparent;
+        border: 4px solid white;
+        cursor: pointer;
+        
+        @include border-radius(32px);
+        
+        @include transition(all, 0.5s, $normal-bezier, 0s);
+        
+        &.active {
+          background: white;
         }
       }
     }
