--- a/app/assets/stylesheets/_/_utilities.scss
+++ b/app/assets/stylesheets/_/_utilities.scss
@@ -49,12 +49,12 @@ $break-large: 1200px;
 
 @mixin respond-to($media) {
   @if $media == phone {
-    @media only screen and (max-width: $break-small) { @content; }
+    @media only screen and (max-device-width: $break-small) { @content; }
   }
   @else if $media == tablet {
-    @media only screen and (min-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
+    @media only screen and (min-device-width: $break-small + 1) and (max-width: $break-large - 1) { @content; }
   }
   @else if $media == desktop {
-    @media only screen and (min-width: $break-large) { @content; }
+    @media only screen and (min-device-width: $break-large) { @content; }
   }
 }
