Fix font sizing and add images

--- a/app/assets/javascripts/pages/home/_about.js.erb
+++ b/app/assets/javascripts/pages/home/_about.js.erb
@@ -34,16 +34,16 @@ $( document ).on('turbolinks:load', function() {
       tondo: '<%= asset_path "bear.jpg" %>',
     },
     {
-      tease: 'FEAR THE PUP MILLIE',
+      tease: 'MILLIE THE PUP',
       info: 'Rescued and sassy, she loves playing with bones and howling at strangers',
       summary: 'Will demand play before cuddles',
       tondo: '<%= asset_path "millie.jpg" %>',
     },
     {
-      tease: 'LEARNING AND LISTENING',
-      info: 'I am a tinkerer by nature and love solving problems with new tools',
-      summary: 'I am always up for a challenge',
-      tondo: '<%= asset_path "learning.jpg" %>',
+      tease: 'MY BESTFRIEND',
+      info: 'Going strong for 7 years, I\'m the luckiest guy alive to have Leigh',
+      summary: 'I love spending everyday with her',
+      tondo: '<%= asset_path "leigh.jpg" %>',
     },
   ];
     
