--- a/app/views/pages/home/_about.html.erb
+++ b/app/views/pages/home/_about.html.erb
@@ -1,10 +1,8 @@
 <section id="about">
   <div id="hero">
     <div>
-      <span id="hero-large">____ ____ __ ____</span>
-      <span id="hero-small">________ __ ________</span>
-      <!--<span id="hero-large">THEY CALL ME GRIZ</span>-->
-      <!--<span id="hero-small">ASPIRING UX DESIGNER</span>-->
+      <span id="hero-large">THEY CALL ME GRIZ</span>
+      <span id="hero-small">ASPIRING UX DESIGNER</span>
     </div>
   </div>
   
