Implement history section and slider

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,7 +1,4 @@
-section#about, section#work, section#contact {
-  
-}
-
 @import "pages/home/about.scss";
+@import "pages/home/history.scss";
 @import "pages/home/work.scss";
 @import "pages/home/contact.scss";
