--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header id="navigation" class="closed">
   <nav id="menu" role="navigation">
     <a href="#about"><span>about</span></a>
+    <a href="#history"><span>history</span></a>
     <a href="#work"><span>work</span></a>
-    <a href="#"><span>section</span></a>
     <a href="#contact"><span>contact</span></a>
   </nav>
 
