--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
 <%= render 'pages/home/about' %>
+<%= render 'pages/home/history' %>
 <%= render 'pages/home/work' %>
 <%= render 'pages/home/contact' %>
