--- a/app/assets/stylesheets/_/_reset.scss
+++ b/app/assets/stylesheets/_/_reset.scss
@@ -10,8 +10,8 @@ $serif: 'Poiret One', cursive;
 }
 
 html, body {
-  min-height: 100% !important;
-  height: 100%;
+  // min-height: 100% !important;
+  // height: 100%;
 }
 
 body {
