--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -17,7 +17,7 @@ header#navigation {
       @include display-flex;
       @include align-items(center);
       text-align: center;
-      color: map-get($mex, blue);
+      color: #000000;
       text-decoration: none;
       width: 90%;
       max-width: 600px;
