--- a/app/assets/stylesheets/pages/home/_about.scss
+++ b/app/assets/stylesheets/pages/home/_about.scss
@@ -1,7 +1,5 @@
 section#about {
   background: map-get($mex, blue);
-  height: 100%;
-  width: 100%;
   
   div#hero {
     @include display-flex;
@@ -228,17 +226,22 @@ section#about {
     @include display-flex;
     @include align-items(center);
     position: absolute;
-    height: 128px;
+    height: 64px;
     width: 40%;
     bottom: 30px;
     right: 30px;
     text-decoration: none;
-    color: white;
-    background: map-get($mex, pink);
+    font-size: 32px;
+    color: map-get($mex, blue);
+    background: white;
       
-    @include respond-to(phone) { width: calc(100% - 60px); }
+    @include respond-to(phone) {
+      width: calc(100% - 60px);
+      height: 48px;
+      font-size: 24px;
+    }
     
-    @include border-radius(4px);
+    @include border-radius(8px);
       
     span {
       display: block;
@@ -248,11 +251,11 @@ section#about {
     }
     
     &.hover {
-      background: saturate(map-get($mex, pink), 10%);
+      border: 4px solid map-get($mex, blue);
     }
     
     &.mousedown {
-      background: saturate(map-get($mex, pink), 20%);
+      transform: translateY(4px);
     }
   }
 }
